--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="userList"></div>
 
-    <!-- <script src="index.js" type="module"></script> -->
+    <script src="index.js" type="module"></script>
 
     <!-- <script src="callback.js"></script> -->
 
